feat: feat controller queue size, execution thread count (#1649)